# mosamatic2

./: README.md  TODO.md
mosamatic2/: CHANGELOG  Dockerfile  README.md  entrypoint.sh  pyproject.toml
mosamatic2/scripts/: activate.bat  builddockerimage.bat  builddockerimage.ps1  dcmdump.bat  deploy.ps1  deploy2dockerhub.bat  deploy2dockerhub.ps1  deploy2pypi.bat  installtorchwithcuda.bat  mosamatic2-install.ps1  mosamatic2-run.ps1  mosamatic2.bat  rundockerimage.bat  rundockerimage.sh  setupenv.ps1  test.bat  test.sh  testcli.bat  testdefaultpipeline.bat  testliveranalysispipeline.bat  testserver.bat
mosamatic2/scripts.old/: activate.sh  installtorchwithcuda.bat  installtotalsegmentatorlicense.bat  rundockerimage.bat  runserver.bat  test.bat  test.sh  testboadockerpipeline.bat  testdefaultdockerpipeline.bat
mosamatic2/scripts.old/installation/: installdeps.bat
mosamatic2/scripts/installation/: installdeps.bat  mosamatic2.bat  mosamatic2_install.bat
mosamatic2/scripts/tests/: boadockerpipeline.ps1  defaultpipeline.ps1  run.ps1
mosamatic2/src/experiments/: totalsegmentator.py
mosamatic2/src/experiments/boa/: run.bat
mosamatic2/src/experiments/boamosamatic/: buildfilemapping.py  collectscansandcreateniftis.py  collectscansfor.py  comparel3sandscans.py  constants.py  countsandtimings.json  error_log.txt  filemapping.json  findl3sforniftis.py  folder_mapping.json  foldermapping.json  generatecountsandtimings.py  main.py  utils.py  webdav.py
mosamatic2/src/experiments/boamosamatic/old/: README.md  images.json  main.py  utils.py
mosamatic2/src/experiments/cocosmit/: main.py
mosamatic2/src/experiments/contrastsensitivity/: preparedatalieke.py  runanalysis.py  todo.txt
mosamatic2/src/experiments/contrastsensitivity/lieke/: analysis.py  (+1 more)
mosamatic2/src/experiments/copyporschtosandisk/: main.py  utils.py
mosamatic2/src/experiments/coronal2axial/: coronal2axial.py
mosamatic2/src/experiments/corpus/: main.py
mosamatic2/src/experiments/dicomdirscan/: dicomdirscan.py
mosamatic2/src/experiments/dicomseriesfinder/: main.py
mosamatic2/src/experiments/dockerrunning/: main.py
mosamatic2/src/experiments/emmymaas/: flattenimages.py  main.py  mergebodycompscoreswithexcel.py
mosamatic2/src/experiments/l1tol5analysis/: collectfiles.py  main.py
mosamatic2/src/experiments/lauracools/: removedotsfromfilenames.py  unzipscans.py
mosamatic2/src/experiments/lisa/: main.py
mosamatic2/src/experiments/liversegments/: main.py
mosamatic2/src/experiments/moose/: main.py
mosamatic2/src/experiments/palga/: main.py
mosamatic2/src/experiments/prepare_umcg_nicole/: main.py
mosamatic2/src/experiments/prepareumcgnicole/: copyscansok.py  main.py
mosamatic2/src/experiments/pyside6matplotlib/: main.py
mosamatic2/src/experiments/pytorcht4/: example_pipeline.py  example_pipeline_l3.py  example_pipeline_remove_vat.py  models.py  param_loader.py  params.json  params_2.json
mosamatic2/src/experiments/quinten/: dicom.txt  totalseg.txt
mosamatic2/src/experiments/segmentationviewer/: main.py  mainwindow.py
mosamatic2/src/experiments/totalsegmentatorgpu/: main.py
mosamatic2/src/experiments/vtk/: cone.py  dicomaxialviewer.py  liversegments.py  niftiaxialviewer.py  niftisliceviewer.py  pyqtgraphbarchart.py  viewports.py  vtkinfovis.py
mosamatic2/src/experiments/vtkclipping/: main.py
mosamatic2/src/experiments/vtkmyosteatosis/: main.py  mainmyosteatosis.py  mainnumpy.py
mosamatic2/src/experiments/vtksegmentationviewer/: main.py
mosamatic2/src/experiments/webdavmdr/: folder_names.json  list_l3_file_names.py  main.py  olvg_amsterdam_(15).json
mosamatic2/src/experiments/zoe/: nii2npyrename.py
mosamatic2/src/mosamatic2/: api.py  app.py  cli.py  constants.py  server.py
mosamatic2/src/mosamatic2/commands/: boadockerpipeline.py  calculatemaskstatistics.py  calculatescores.py  createdicomsummary.py  createpngsfromsegmentations.py  defaultdockerpipeline.py  defaultpipeline.py  dicom2nifti.py  liveranalysispipeline.py  rescaledicomfiles.py  rescaledicomimages.py  segmentmusclefatl3tensorflow.py  selectslicefromscans.py  totalsegmentator.py
mosamatic2/src/mosamatic2/core/: utils.py
mosamatic2/src/mosamatic2/ui/: mainwindow.py  settings.py  utils.py  worker.py
mosamatic2/tests/: sources.py  test_api.py  test_app.py  test_calculatescores.py  test_data.py  test_datamanager.py  test_loaders.py  test_server.py  test_totalseg_dixon.py  test_totalsegmentator.py
mosamatic2/tests/experiments/: test_coronal2axial.py  test_dicomdir_scan.py  test_totalseg_dixon.py
mosamatic2/tests/miscellaneous/: test_data.py  test_datamanager.py  test_loaders.py  test_server.py
mosamatic2/tests/pipelines/: test_boadockerpipeline.py  test_defaultdockerpipeline.py  test_defaultpipeline.py  test_liveranalysispipeline.py  test_pipeline.py
mosamatic2/tests/tasks/: test_applythresholdtosegmentationstask.py  test_calculatescores.py  test_createdicomsummarytask.py  test_createpngsfromsegmentations.py  test_dicom2nifti.py  test_rescaledicomimages.py  test_segmentationnifti2numpytask.py  test_segmentationnumpy2niftitask.py  test_segmentmusclefatl3tensorflow.py  test_selectslicefromscan.py  test_selectslicefromscans.py  test_totalsegmentator.py
(+115 files in other folders)
