[project]
name = "mosamatic2"
version = "2.0.26"
description = ""
authors = [
    {name = "Ralph Brecheisen", email = "r.brecheisen@maastrichtuniversity.nl"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyside6-essentials>=6.9",
    "pydicom>=3.0.1",
    "dicom2nifti>=2.6.2",
    "numpy>=1.26.4",
    "pandas>=2.3.2",
    "nibabel>=5.3.2",
    "openpyxl>=3.1.5",
    "pendulum>=3.1.0",
    "pillow>=11.3.0",
    "python-gdcm>=3.0.26",
    "scipy>=1.15.3",
    "torch==2.5.1",
    "torchvision>=0.20.1",
    "torchsummary",
    "tensorflow==2.15.*; platform_system == 'Linux'",
    "tensorflow-intel==2.15.0; platform_system == 'Windows'",
    "tensorflow-macos==2.15.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "tensorboard==2.15.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow-io-gcs-filesystem==0.31.0; platform_system == 'Windows'",
    "tensorflow-io-gcs-filesystem>=0.31.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "totalsegmentator>=2.11.0",
    "flask>=3.1.2",
    "antspyx>=0.5.4",
    "vtk>=9.5.1",
    "pyqtgraph>=0.13.7",
    "moosez>=3.0.29",
    "docker>=7.1.0",
    "slicer>=0.0.8",
    "webdavclient3>=3.14.6",
    "simpleitk>=2.5.2",
]

[tool.poetry]
packages = [
    {include = "mosamatic2", from = "src"},
    {include = "models.py", from = "src" },
]

[tool.poetry.scripts]
mosamatic2 = "mosamatic2.app:main"
mosamatic2-cli = "mosamatic2.cli:main"
mosamatic2-server = "mosamatic2.server:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"